# IGVC2014

./: .gitignore
firmware/: README.txt
firmware/mechanum1/: mechanum1.ino
firmware/mechanum2hack/: mechanum2hack.ino
firmware/mechanum2test/: mechanum2test.ino
sb_commander/: CMakeLists.txt  package.xml
sb_commander/src/: sb_commander_node.cpp
sb_driver/: CMakeLists.txt  package.xml
sb_driver/src/: arduino_driver.cpp
sb_flags/: CMakeLists.txt  README.md  main.cpp  package.xml
sb_flags/src/: flag_detector.cpp
sb_gps/: CMakeLists.txt  CMakeLists.txt~  mainpage.dox  mainpage.dox~  manifest.xml  manifest.xml~  package.xml
sb_gps/WaypointsTxt/: waypoints.txt
sb_gps/msg/: Coord.msg
sb_gps/src/: file  final.cpp  gps.cpp  gps_data.cpp  gps_data.cpp~  gps_subscriber_example.cpp  gps_translator.cpp~  notes.txt  read_waypoints  read_waypoints.cpp  read_waypoints.cpp~  read_waypoints.h  read_waypoints.h~  sample_gps_output.cpp  test_pub.cpp  waypoints.txt  waypoints.txt~
sb_lanes/: CMakeLists.txt  package.xml
sb_lanes/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  sb_lanes-msg-extras.cmake.develspace.in  sb_lanes-msg-paths-context.py  setup_cached.sh
sb_lanes/src/: LaneDetector.cpp
sb_lidar/: CMakeLists.txt  package.xml
sb_lidar/src/: imagineday_lidar.cpp  lidar_force_nav.cpp
sb_msgs/: CMakeLists.txt  package.xml
sb_msgs/msg/: gps.msg
sb_templates/: package.xml
sb_templates/src/: talker2.cpp
sb_vision/BetweenLines/: .cproject
sb_vision/Line_Detector/: .cproject  .project  CMakeCache.txt  CMakeLists.txt  Line_Detector  Line_Detector.cpp  Makefile  cmake_install.cmake
sb_vision/catkin_generated/: pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  sb_vision-msg-paths-context.py
sb_vision/cmake/: sb_vision-genmsg-context.py  sb_vision-genmsg.cmake
sb_vision/devel/: .catkin  .rosinstall  (+1 more)
(+78 files in other folders)
